@@ -743,7 +743,7 @@ public class WspWinExportPage extends WizardDataTransferPage implements Listener
     final GridData buttonData = new GridData( GridData.FILL_HORIZONTAL );
     button.setLayoutData( buttonData );
 
-    button.setData( new Integer( id ) );
+    button.setData( Integer.valueOf( id ) );
     button.setText( label );
     button.setFont( parent.getFont() );
 
